# StampFly_espidf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/hal/: CMakeLists.txt
components/hal/include/: adc_hal.hpp  gpio_hal.hpp  hal_base.hpp  i2c_hal.hpp  interrupt_hal.hpp  nvs_hal.hpp  pwm_hal.hpp  spi_hal.hpp  timer_hal.hpp  uart_hal.hpp
components/hal/src/: adc_hal.cpp  gpio_hal.cpp  hal_base.cpp  i2c_hal.cpp  interrupt_hal.cpp  nvs_hal.cpp  pwm_hal.cpp  spi_hal.cpp  timer_hal.cpp  uart_hal.cpp
components_backup/attitude_estimation/: CMakeLists.txt
components_backup/attitude_estimation/src/: attitude_estimation.c
components_backup/audio/: CMakeLists.txt
components_backup/audio/src/: audio_system.c
components_backup/button_control/: CMakeLists.txt
components_backup/button_control/src/: button_control.c
components_backup/cli_interface/: CMakeLists.txt
components_backup/cli_interface/src/: cli_interface.c
components_backup/common/: CMakeLists.txt
components_backup/common/include/: common_types.h
components_backup/common/src/: debug_utils.c  filters.c  interpolation.c  math_utils.c  matrix_operations.c  memory_utils.c  numerical_methods.c  queue_manager.c  ring_buffer.c  signal_processing.c  statistics.c  string_utils.c  timer_utils.c  vector_math.c
components_backup/communication/: CMakeLists.txt
components_backup/communication/src/: communication.c
components_backup/control_manager/: CMakeLists.txt
components_backup/control_manager/src/: control_manager.c
components_backup/flight_control/: CMakeLists.txt
components_backup/flight_control/src/: flight_control.c
components_backup/hal/: CMakeLists.txt
components_backup/hal/include/: hal_common.h
components_backup/hal/src/: adc_hal.c  dac_hal.c  gpio_hal.c  i2c_hal.c  interrupt_hal.c  pwm_hal.c  rmt_hal.c  spi_hal.c  timer_hal.c  uart_hal.c
components_backup/led_control/: CMakeLists.txt
components_backup/led_control/src/: led_control.c
components_backup/mpc_control/: CMakeLists.txt
components_backup/mpc_control/src/: mpc_control.c
components_backup/navigation/: CMakeLists.txt
components_backup/navigation/src/: navigation.c
components_backup/pid_control/: CMakeLists.txt
components_backup/pid_control/src/: pid_control.c
components_backup/position_estimation/: CMakeLists.txt
components_backup/position_estimation/src/: position_estimation.c
components_backup/remote_control/: CMakeLists.txt
components_backup/remote_control/src/: remote_control.c
components_backup/sensor_fusion/: CMakeLists.txt
components_backup/sensor_fusion/src/: sensor_fusion.c
components_backup/sensors/: CMakeLists.txt
components_backup/sensors/include/: sensor_common.h
components_backup/sensors/src/: sensor_interface.c  sensor_manager.c  sensor_types.c
components_backup/storage/: CMakeLists.txt
components_backup/storage/src/: storage.c
components_backup/system/: CMakeLists.txt
components_backup/system/include/: system_manager.h
components_backup/system/src/: diagnostic.c  fault_handler.c  memory_monitor.c  performance_monitor.c  power_management.c  resource_monitor.c  system_manager.c  system_reset.c  task_manager.c  thermal_management.c  watchdog_manager.c
docs/: cpp_class_design.md
main/: CMakeLists.txt  app_main.h  main.c
